--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url(./img/high-commision.jpg);">
                   <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1 text-overlay">
-                    <h3 class="goal-text pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Advocate for Sustainable Development</h3>
+                    <h3 class="goal-text pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Advocate for Sustainable Growth</h3>
                     <ul class="d-flex list-unstyled mt-auto">
                       <li class="me-auto">
                         <img src="./icons/bricks.svg" alt="Brick icon" width="32" height="32">
